kubernetes/overlays/native/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-with-quarkus
spec:
  template:
    spec:
      containers:
      - name: code-with-quarkus
        image: quay.io/redhat-telco-adoption/serverless-troubleshooting:1.0.1-native
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
            cpu: 50m
        startupProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 2
          failureThreshold: 10
