kubernetes/overlays/native/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: code-with-quarkus
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: native-code-with-quarkus
    weight: 100
  wildcardPolicy: None
